--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
     color: #fff;
     padding: 1rem 0;
     text-align: center;
-    background-image: url('textures/spiration-dark.png') ;
+    background-image: url('textures/moroccan-flower-dark.png') ;
 
 }
 
